Add autoindexing
Not the best solution, but also not the worst
